syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/floroz/gavel/pkg/proto/auth/v1;authv1";

service AuthService {
  // Register creates a new user account.
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // Login authenticates a user and returns access/refresh tokens.
  rpc Login(LoginRequest) returns (LoginResponse);

  // Refresh rotates the refresh token and issues a new access token.
  rpc Refresh(RefreshRequest) returns (RefreshResponse);

  // Logout revokes the given refresh token.
  rpc Logout(LogoutRequest) returns (LogoutResponse);

  // GetProfile returns the full user details.
  // If user_id is empty, it returns the profile of the authenticated user ("Me").
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
  string country_code = 4; // ISO 3166-1 alpha-2
  string phone_number = 5;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string ip_address = 3;
  string user_agent = 4;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3; // For access token
}

message RefreshRequest {
  string refresh_token = 1;
  string ip_address = 2;
  string user_agent = 3;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {}

message GetProfileRequest {
  string user_id = 1; // Optional: If empty, uses the ID from the Access Token claims
}

message GetProfileResponse {
  string id = 1;
  string email = 2;
  string full_name = 3;
  string avatar_url = 4;
  string country_code = 5;
  google.protobuf.Timestamp created_at = 6;
}

message TokenClaims {
  string sub = 1;
  string email = 2;
  string full_name = 3;
  string role = 4;
  repeated string permissions = 5;
  string iss = 6;
  double exp = 7;
  double iat = 8;
}

